--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
 			<div class="ContentBody">
 				<ul>
 					<li>A file type similar to the Sounds files, except it supports .webm video as well</li>
-					<li>For more information on these files, visit <a href="http://dnsev.github.com/ve/" target="_blank">the homepage</a></li>
+					<li>For more information on these files, visit <a href="http://dnsev.github.io/ve/" target="_blank">the homepage</a></li>
 				</ul>
 			</div>
 			<div class="ContentHeader" multi_id="uploader"><span class="HoverShowControl"><span class="ContentHeaderTitle">Uploader</span>:<span class="HoverShow"> <a class="InternalLink" href="#.?scroll=uploader">Hardlink</a></span></span></div>
@@ -1007,7 +1007,7 @@
 			<span class="PageVariableDisplayInv" pvar="video">
 			<div class="ContentHeader" multi_id="videncode"><span class="HoverShowControl"><span class="ContentHeaderTitle">Including video</span>:<span class="HoverShow"> <a class="InternalLink" href="#.?scroll=videncode" maintain="tips,video">Hardlink</a></span></span></div>
 			<div class="ContentBody">
-				<p>An early format for including short video clips is now available: <a href="http://dnsev.github.com/ve/" target="_blank">Videncode</a></p>
+				<p>An early format for including short video clips is now available: <a href="http://dnsev.github.io/ve/" target="_blank">Videncode</a></p>
 
 				<p>The application includes a GUI, and the site includes a step by step guide for making content.</p>
 
