--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 					<div class="ReadMeAdviceDivPadded">
 						<div class="ReadMeAdviceText" data-typewrite-wait-before="0.5" data-typewrite-wait-after="0.5">Don't answer pointless questions</div>
 						<div class="ReadMeAdviceDescription">
-							If a link hasn't been posted, go ahead and post a link to this website. Otherwise, <i>ignore</i> people and let them read the thread.
+							If a link hasn't been posted, go ahead and <span class="ReadMeStrikeThru">post a link to this website</span> don't do that because apparently it's a banned url. Post search "google dnsev" instead. Otherwise, <i>ignore</i> people and let them read the thread.
 						</div>
 					</div>
 				</div>
@@ -292,7 +292,7 @@
 					That being said, don't pretend like this is some sort of "secret club," or that "spoonfeeding" people this website is in any way negative.
 				</div>
 				<div class="ReadMeText ReadMeTextPadded">
-					It's not immediately obvious that someone should just google "<a href="https://www.google.com/#q=4chan+media+player" target="_blank">4chan media player</a>". Even when searching "<a href="https://www.google.com/#q=4chan+sounds" target="_blank">4chan sounds</a>", this isn't always the first link, and it's even worse when searching "<a href="https://www.google.com/#q=4cs" target="_blank">4cs</a>".
+					It's not immediately obvious that someone should just google "<a href="https://www.google.com/#q=4chan+media+player" target="_blank">4chan media player</a>". Even when searching "<a href="https://www.google.com/#q=4chan+sounds" target="_blank">4chan sounds</a>", it hasn't historically been the first link, and is still cluttered with obsolete script links; and it's even worse when searching "<a href="https://www.google.com/#q=4cs" target="_blank">4cs</a>".
 				</div>
 
 				<div class="ReadMeConfirmBox" data-typewrite-full="true" data-typewrite-wait-before="2">
